--- a/frontend/src/styles/pages/edit.css
+++ b/frontend/src/styles/pages/edit.css
@@ -4,7 +4,6 @@
     padding-left: 200px;
     display: flex;
     flex-direction: column;
-    padding-bottom: 110px;
     object-fit: cover;
     height: 100dvh;
 }
@@ -161,6 +160,34 @@
     .editWindow .textInputs input,
     .editWindow .textInputs textarea {
         font-size: 1.5rem;
+    }  
+
+    .editWindow .textInputs {
+        width: 400px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .editWindow .closeButton {
+        width: 40px;
+        height: 40px;
+    }
+
+    .editWindow .editForm button {
+        font-size: 1.5rem;
+    }
+
+    .editWindow .addCard h2 {
+        font-size: 1.4rem;
+    }
+
+    .editWindow .textInputs input,
+    .editWindow .textInputs textarea {
+        font-size: 1.4rem;
+    }  
+
+    .editWindow .textInputs {
+        width: 350px;
     }
 }
 
