--- a/frontend/src/styles/pages/edit.css
+++ b/frontend/src/styles/pages/edit.css
@@ -170,6 +170,8 @@
 @media (max-width: 1100px) {
     .editWindow .closeButton {
         width: 40px;
+        top: 15px;
+        right: 15px;
         height: 40px;
     }
 
@@ -193,9 +195,21 @@
 
 @media (max-width: 900px) {
     .editPage {
-        padding-top: 50px;
+        padding-top: 100px;
+        height: auto;
         padding-left: 200px;
+        padding-bottom: 50px;
     }
+
+    .editWindow .addCard {
+        width: 100%;
+        text-align: center;
+    }
+
+
+    .editWindow .inputs {
+        flex-direction: column;
+    } 
 }
 
 @media (max-width: 600px) {
