--- a/frontend/src/styles/components/headers/mainHeader.css
+++ b/frontend/src/styles/components/headers/mainHeader.css
@@ -1,26 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
-
-.main-header {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.25);
-    background: #0B0C10;
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    align-items: center;
-    padding: 10px 30px;
-    z-index: 99;
-}
-
-.main-header h1{
-    font-size: 2rem;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap");
 
 .main-header .title {
     display: flex;
@@ -50,13 +28,11 @@
 
 .main-header .title .burger .line.bottom.open {
     transform: translateY(-5px) rotate(45deg);
-
 }
 
 .main-header .title .burger .line.top.open {
-    transform: translateY(5px) rotate(135deg) ;
+    transform: translateY(5px) rotate(135deg);
 }
-
 
 .main-header .search-bar {
     display: flex;
@@ -83,7 +59,6 @@
     fill: white;
 }
 
-
 .main-header .search-input::placeholder {
     color: rgba(255, 255, 255, 0.5);
 }
@@ -97,7 +72,7 @@
 .main-header .search-input:-webkit-autofill:hover,
 .main-header .search-input:-webkit-autofill:focus,
 .main-header .search-input:-webkit-autofill:active {
-    -webkit-box-shadow: 0 0 0 1000px #0B0C10 inset !important;
+    -webkit-box-shadow: 0 0 0 1000px #0b0c10 inset !important;
     -webkit-text-fill-color: white !important;
 }
 
@@ -118,7 +93,7 @@
 }
 
 .main-header .loginButton {
-    background: #6E5BFF;
+    background: #6e5bff;
     border: none;
     padding: 5px 35px;
     color: white;
@@ -130,7 +105,6 @@
         background: lab(58.9% 33.57 -58.4);
     }
 }
-
 
 @media (max-width: 900px) {
     .main-header {
@@ -188,5 +162,3 @@
         display: flex;
     }
 }
-
-
